Atualização nos ex da aula de Background-Image

--- a/cev modulo 3/Background Image/fundo04.html
+++ b/cev modulo 3/Background Image/fundo04.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalização de Imagem</title>
+    <title>Posicionamento do Gato</title>
     <style>
         body{
+            height: 97vh;
             font-family: Arial, Helvetica, sans-serif;
             background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-            background-size: 100px 100px;
+            background-size: 100px;
             background-repeat: no-repeat;
+            border: 1px dashed black;
+            background-position: left bottom; /* Por padrao esta no Center */
         }
     </style>
 </head>
 <body>
-
 </body>
 </html>
