--- a/cev modulo 3/Tabelas/tabela02.html
+++ b/cev modulo 3/Tabelas/tabela02.html
@@ -10,21 +10,25 @@
         }
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse; /*Remove os espaços entre as tabelas */
-            border: 3px solid red;
-        }
-        tr#linha2{
-            background-color: rgba(0, 255, 255, 0.247);
-        }
-        tr#linha4{
-            background-color: rgba(128, 0, 128, 0.267);
         }
         td{
             border: 1px solid black;
             padding: 8px;
+            /*  Alinhamento Horizontal
+            Left or Right or Center
+            */
+            text-align: center; /* Alinhamento Horizontal */
+
+            /* Alinhamento Vertical
+            Top or Middle or Bottom
+            */
+            vertical-align: top; /* Alinhamento Vertical */
         }
-        td.dado{
-            background-color: rgba(255, 255, 0, 0.493);
+        .numero{
+            text-align: right;
+            vertical-align: middle;
         }
     </style>
 </head>
@@ -34,36 +38,29 @@
         HIERARQUIA DE TABELAS SIMPLES
         TABLE = tabela
             TABLE ROW = linha de tabela
-            TABLE HEADER =  cabeçalho de tabelo
+            TABLE HEADER =  cabeçalho de tabela
             TABLE DATA = dado de tabela
      -->
     <table>
         <tr> <!-- Primeira linha -->
-            <td class="dado">A1</td> <!-- Celula -->
+            <td>A1</td> <!-- Celula -->
             <td>B1</td>
-            <td>C1</td>
+            <td class="numero">C1</td>
         </tr>
-        <tr id="linha2">  <!-- Segunda linha -->
+        <tr>  <!-- Segunda linha -->
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
         </tr>
         <tr> <!-- Terceira linha -->
             <td>A3</td>
-            <td>B3</td>
-            <td class="dado">C3</td>
+            <td class="numero">B3</td>
+            <td>C3</td>
         </tr>
-        <tr id="linha4"> <!-- Quarta linha -->
+        <tr> <!-- Quarta linha -->
             <td>A4</td>
             <td>B4</td>
             <td>C4</td>
-        </tr>
-        <tr>
-            <td>A5</td>
-            <td>B5</td>
-        </tr>
-        <tr>
-            <td>A6</td>
         </tr>
     </table>
 </body>
