Aula de Tabela (Aula 04)

--- a/cev modulo 3/Tabelas/tabela02.html
+++ b/cev modulo 3/Tabelas/tabela02.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>  
-    <h1>Minha primeira tabela</h1>
+    <h1>Alinhamento do Conteudo de Tabelas</h1>
     <!-- 
         HIERARQUIA DE TABELAS SIMPLES
         TABLE = tabela
