Aula de Tabela (Aula 06)

--- a/cev modulo 3/Tabelas/tabela03.html
+++ b/cev modulo 3/Tabelas/tabela03.html
@@ -35,6 +35,10 @@
         #populacao{
             width: 50px;
         }
+        /* Efeito Zebrado */
+        tbody > tr:nth-child(2n){
+            background-color: gray;
+        }
     </style>
 </head>
 <body>
