Correção no Desafio 2 de Tabela

--- a/cev modulo 3/Tabelas/Desafio 02/index.html
+++ b/cev modulo 3/Tabelas/Desafio 02/index.html
@@ -10,7 +10,6 @@
         }
         table{
             width: 600px;
-            max-width: 600px;
             border-collapse: collapse;
         }
         td, th{
@@ -73,7 +72,7 @@
                 <td class="num">6.25</td>
             </tr>
             <tr class="media">
-                <td colspan="4" scope="row">Média de Exatas</td>
+                <th colspan="4" scope="row">Média de Exatas</th>
                 <td class="num">8.3</td>
             </tr>
             <tr>
@@ -90,11 +89,10 @@
                 <td class="num">3.75</td>
             </tr>
             <tr class="media">
-                <td colspan="4" scope="row">Media de Humanas</td>
+                <th colspan="4" scope="row">Media de Humanas</th>
                 <td class="num">4.25</td>
             </tr>
         </tbody>
-        <tfoot></tfoot>
     </table>
 </body>
 </html>
