Aula de iframe (Aula 02)
Aprendendo a ajustar um iframe

--- a/cev modulo 4/iframe/iframe01.html
+++ b/cev modulo 4/iframe/iframe01.html
@@ -6,9 +6,9 @@
     <title>Estudos de iframe</title>
     <style>
         iframe{
-            display: block;
             width: 400px;
-            height: 300px;
+            height: 400px;
+            border: 1px solid black;
         }
     </style>
 </head>
@@ -18,9 +18,19 @@
     -->
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <!-- Tamanho Padrão do iframe 300x150 -->
+        <iframe src="https://www.cursoemvideo.com" frameborder="0">
+            <a href="https://www.cursoemvideo.com">CursoemVideo</a>
+        </iframe>
         para aprender a programar</p>
-    <p>O site do Google também é muito legal</p>
-    <iframe src="https://www.google.com" frameborder="0"></iframe>
+    <p>
+        <!-- frameborder é so "0" ou "1" -->
+        O repositório do Guanabara 
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" scolling="">
+        no <a href="https://gustavoguanabara.github.io">github</a>
+        </iframe>
+        também é bem legal
+    </p>
+    
 </body>
 </html>
