--- a/cev modulo 4/formulario/form01.html
+++ b/cev modulo 4/formulario/form01.html
@@ -10,11 +10,16 @@
         }
     </style>
 </head>
-<body>
+<body> 
     <h1>Meu primeiro formulário</h1>
-    <form>
-        <p>Nome: <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"></p>
+    <!-- autocomplete off serve para nao sugerir mensagem no navegador -->
+    <form action="cadastro.php" autocomplete="off">
+        <p><label for="inome">Nome:</label> 
+            <input type="text" name="nome" id="inome">
+        </p>
+        <p><label for="isobrenome">Sobrenome: </label>
+            <input type="text" name="sobrenome" id="isobrenome">
+        </p>
         <p><input type="submit" value="Enviar"></p>
     </form>
 </body>
