Aula de Media Queries (Aula 02)
Aprendendo a criar estilos diferentes para Print(Impressora) e Screen(Tela).

--- a/cev modulo 4/media_queries/index.html
+++ b/cev modulo 4/media_queries/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Queries</title>
-    <link rel="stylesheet" href="style.css">k
+    <title>Media Query</title>
+    <link rel="stylesheet" href="estilo/tela.css" media="screen">
+    <link rel="stylesheet" href="estilo/impressora.css" media="print">
 </head>
 <body>
-    
+    <header class="cabeçalho">
+        <h1>Noticias</h1>
+            <ul class="menu">
+                <li class="assunto">Esportes</li>
+                <li class="assunto">Politica</li>
+                <li class="assunto">Tecnologia</li>
+            </ul>
+        </menu>
+    </header>
+    <main>
+        <article>
+            <h2>Estou aprendendo a criar Media Queries</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem expedita iste necessitatibus debitis recusandae. Repellat eos ipsam dolor. Ducimus suscipit labore temporibus veritatis! Officiis optio, quos cum quisquam facere corporis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde voluptate eaque rerum reprehenderit harum excepturi ea? Tenetur, alias! Voluptates magnam fuga necessitatibus veritatis quis tempora harum ipsa deserunt dolorem reiciendis.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem expedita iste necessitatibus debitis recusandae. Repellat eos ipsam dolor. Ducimus suscipit labore temporibus veritatis! Officiis optio, quos cum quisquam facere corporis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde voluptate eaque rerum reprehenderit harum excepturi ea? Tenetur, alias! Voluptates magnam fuga necessitatibus veritatis quis tempora harum ipsa deserunt dolorem reiciendis.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi et deserunt placeat commodi, consequatur quibusdam, quasi officiis quae asperiores sunt possimus nemo, voluptate cum eaque illo tempore quidem expedita rerum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste maiores sequi ut quae tenetur non magni fugit explicabo illo amet, cupiditate enim veritatis suscipit assumenda nobis quasi vel est impedit!</p>
+        </article>
+    </main>
 </body>
 </html>
