Correção na Aula 03
secreen -> screen

; - ;

--- a/cev modulo 4/media_queries/mq02.html/index.html
+++ b/cev modulo 4/media_queries/mq02.html/index.html
@@ -9,7 +9,7 @@
          
         Media Features é pra indicar a orientação da media e tem parentese
     -->
-    <link rel="stylesheet" href="estilos/retrato.css" media="secreen" and (orientation:portrait)>
+    <link rel="stylesheet" href="estilos/retrato.css" media="screen" and (orientation:portrait)>
     <link rel="stylesheet" href="estilos/paisagem.css" media="screen" and (orientation:lendscape)>
 </head>
 <body>
