outra correção na aula 03

--- a/cev modulo 4/media_queries/mq02.html/index.html
+++ b/cev modulo 4/media_queries/mq02.html/index.html
@@ -10,7 +10,7 @@
         Media Features é pra indicar a orientação da media e tem parentese
     -->
     <link rel="stylesheet" href="estilos/retrato.css" media="screen" and (orientation:portrait)>
-    <link rel="stylesheet" href="estilos/paisagem.css" media="screen" and (orientation:lendscape)>
+    <link rel="stylesheet" href="estilos/paisagem.css" media="screen" and (orientation:landscape)>
 </head>
 <body>
     <h1>Mude a orientação do seu dispositivo</h1>
