--- a/flexbox/exercicios/ex01/ex01.html
+++ b/flexbox/exercicios/ex01/ex01.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ex01.css">
 </head>
+
 <body>
-    
-    <header>
+
+    <header class="header">
         <a href="#">Logo</a>
         <nav>
-            <ul>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Produtos</a></li>
-                <li><a href="">Contato</a></li>
+            <ul class="menu">
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
 </body>
+
 </html>
