--- a/CSS grid/aula.html
+++ b/CSS grid/aula.html
@@ -18,13 +18,13 @@
         <div>8</div>
         <div>9</div>
         <div>10</div>
-        <div>11</div>
+        <!-- <div>11</div>
         <div>12</div>
         <div>13</div>
         <div>14</div>
         <div>15</div>
         <div>16</div>
-        <div>17</div>
+        <div>17</div> -->
     </div>
 </body>
 </html>
